# ecl-agent

./: .gitignore  README.md  pyproject.toml
agents/: README.md
agents/primary-agent/: IDENTITY.md
agents/subagents/coder/: IDENTITY.md  SYSTEM_PROMPT.md  manifest.yaml
agents/subagents/librarian/: IDENTITY.md  SYSTEM_PROMPT.md  manifest.yaml
agents/subagents/planner/: IDENTITY.md  SYSTEM_PROMPT.md  manifest.yaml
agents/subagents/researcher/: IDENTITY.md  SYSTEM_PROMPT.md  manifest.yaml
agents/subagents/verifier/: IDENTITY.md  SYSTEM_PROMPT.md  manifest.yaml
apps/: README.md
apps/cli/: README.md
apps/cli/local_agent_cli/: cli.py  client.py  renderers.py
apps/runtime/: README.md
apps/runtime/local_agent_runtime/: artifact_store.py  bootstrap.py  conversation_compaction_service.py  durable_services.py  event_bus.py  main.py  memory_seed.py  method_handlers.py  recovery_service.py  resume_service.py  run_state_store.py  runtime_server.py  server.py  subagents.py  task_runner.py
apps/tui/: pyproject.toml
apps/tui/local_agent_tui/: __init__.py  app.py  bootstrap.py  compat.py  operator_settings.py  renderables.py
docs/: current.status.md  policy-guide.md
docs/adr/: ADR-0001-runtime-client-separation.md  ADR-0002-transport-strategy.md  ADR-0003-deepagent-adapter-boundary.md  ADR-0004-memory-taxonomy-and-persistence.md  ADR-0005-sandbox-and-filesystem-policy.md  ADR-0006-subagent-model-routing.md  README.md
docs/architecture/: README.md  runtime.example.toml
docs/plans/: MILESTONE-0-local-agent-harness.md  MILESTONE-1-implementation-blueprint.md  MILESTONE-1.md  MILESTONE-2-implementation-blueprint.md  MILESTONE-2.md  MILESTONE-3-implementation-blueprint.md  MILESTONE-3.md
docs/specs/: local-agent-harness-architecture-spec.md  local-agent-harness-context-map.md  local-agent-harness-master-spec-v1.md  local-agent-harness-runtime-protocol-spec-v1.md
services/artifact_service/local_agent_artifact_service/: __init__.py  store.py
services/checkpoint_service/: __init__.py
services/deepagent_runtime/: __init__.py
services/memory_service/: __init__.py
services/observability_service/: __init__.py
services/policy_service/: __init__.py
services/remote_mcp_auth_service/: __init__.py
services/subagent_registry/: __init__.py
services/subagent_runtime/: __init__.py
services/web_service/: __init__.py
tests/: test_milestone0.py  test_milestone1_phase1.py
tests/fixtures/: mcp_echo_server.py
tests/integration/: test_cli_integration.py  test_runtime_server.py
tests/unit/: test_artifact_store.py  test_bootstrap.py  test_checkpoint_adapter.py  test_cli.py  test_config_loader.py  test_deepagent_runtime.py  test_event_bus.py  test_local_execution_sandbox.py  test_persistence_services.py  test_protocol_models.py  test_run_state_store.py  test_sandbox_path_policy.py  test_subagent_model_routing.py  test_subagent_registry.py  test_subagent_skill_registry.py  test_subagent_tool_scope.py  test_task_runner.py  test_tui_app.py  test_tui_dashboard_widgets.py  test_tui_diagnostics.py  test_tui_event_timeline.py  test_tui_footer_hints.py  test_tui_help.py  test_tui_log_view.py  test_tui_navigation_stack.py  test_tui_phase1_widgets.py  test_tui_protocol_client.py  test_tui_renderables.py  test_tui_screen_breadcrumb.py  test_tui_store.py  test_tui_task_detail_panels.py  test_tui_typography.py  test_tui_utils_text.py  test_tui_utils_time_format.py  test_web_service.py
(+114 files in other folders)
